# Collatz-Proof

./: README.md  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
notebooks/: ABC_Core_Analysis.ipynb  Advanced_Visualization.ipynb  Basic_Analysis.ipynb
paper/: main.tex
src/simulations/: collatz_simulations.py  collatz_simulations1.py  debug_collatz.py
src/visualization/: abc_correlation.py  key_visualizations.py  trajectory_3d.py
